2003-07-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-x-face, shimbun-use-bbdb-for-x-face):
	Improve the customizing widgets.
	* shimbun/sb-sourceforge-jp.el
	(shimbun-sourceforge-jp-mailing-lists): Ditto.
	* shimbun/sb-slashdot-jp.el (shimbun-slashdot-jp-threshold): Diito.
	* shimbun/sb-marc-aims.el (shimbun-marc-aims-group-alist): Ditto.
	* shimbun/sb-geocrawler.el (shimbun-geocrawler-group-alist): Ditto.

	* shimbun/nnshimbun.el (nnshimbun-keep-backlog): Improve the
	customizing widget.
	(nnshimbun-group-parameters-custom): Use `integer' instead of
	`number' for the expiry days.

	* shimbun/mew-shimbun.el (mew-shimbun-folder,
	mew-shimbun-folder-groups, mew-shimbun-db-file,
	mew-shimbun-expires, mew-shimbun-db-length,
	mew-shimbun-unknown-from): Improve the customizing widgets.

	* w3m.el (w3m-command, w3m-user-agent, w3m-command-arguments,
	w3m-command-arguments-alist, w3m-no-proxy-domains,
	w3m-command-environment, w3m-fill-column, w3m-mailto-url-function,
	w3m-mailto-url-popup-function-alist, w3m-imitate-widget-button,
	w3m-pixels-per-character, w3m-coding-system,
	w3m-terminal-coding-system, w3m-input-coding-system,
	w3m-output-coding-system, w3m-file-coding-system,
	w3m-file-name-coding-system, w3m-default-coding-system,
	w3m-coding-system-priority-list, w3m-profile-directory,
	w3m-init-file, w3m-default-save-directory, w3m-accept-languages,
	w3m-icon-directory, w3m-home-page, w3m-arrived-file,
	w3m-keep-arrived-urls, w3m-keep-cache-size, w3m-follow-redirection,
	w3m-resize-image-scale, w3m-default-content-type,
	w3m-content-type-alist, w3m-encoding-type-alist, w3m-decoder-alist,
	w3m-charset-coding-system-alist, w3m-horizontal-scroll-columns,
	w3m-horizontal-shift-columns, w3m-edit-function,
	w3m-url-local-directory-alist, w3m-pop-up-frame-parameters,
	w3m-horizontal-scroll-division, w3m-mbconv-command,
	w3m-local-find-file-regexps, w3m-local-find-file-function,
	w3m-local-directory-view-method, w3m-dirlist-cgi-program,